<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.entuizer.push.CreatePassword"
    tools:showIn="@layout/activity_create_password"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/toolbar_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/colorSecondaryText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <EditText
                android:layout_weight="25"
                android:id="@+id/etUsername2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:gravity="center"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="15dp"/>
            <Button
                android:id="@+id/btnCuentas2"
                android:layout_weight="75"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seleccionarCuenta"
                android:textColor="@color/colorWhite"
                android:textSize="11sp"
                android:textStyle="bold"
                android:background="@drawable/bordes_redondeados_button"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newPassword"
            android:textColor="@color/colorSecondaryText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:gravity="center"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmNewPassword"
            android:textColor="@color/colorSecondaryText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:gravity="center"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_redondeados_button"
            android:padding="10dp"
            android:text="@string/registerUser"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20dp"/>

    </LinearLayout>

</LinearLayout>
