<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.entuizer.push.Signin"
    tools:showIn="@layout/activity_signin"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/toolbar_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@mipmap/app_logo_black"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/colorSecondaryText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">
            <EditText
                android:layout_weight="100"
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:gravity="center"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorSecondaryText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:gravity="center"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp"/>

        <CheckBox
            android:id="@+id/cbRecordar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/remember"
            android:textStyle="bold"
            android:textColor="@color/colorSecondaryText"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordes_redondeados_button"
            android:text="@string/iniciarSes"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>
